--- a/SurfsUp-web/Views/Surfboards/Index.cshtml
+++ b/SurfsUp-web/Views/Surfboards/Index.cshtml
@@ -70,7 +70,8 @@
                 @Html.DisplayFor(modelItem => item.Equipment)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.RentedOut)
+                @Html.CheckBoxFor(modelItem => item.RentedOut)
+                
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
