Added placeholders to inputs

--- a/SurfsUp-web/Views/Surfboards/Create.cshtml
+++ b/SurfsUp-web/Views/Surfboards/Create.cshtml
@@ -19,17 +19,17 @@
             </div>
             <div class="form-group">
                 <label asp-for="Length" class="control-label"></label>
-                <input asp-for="Length" class="form-control" />
+                <input asp-for="Length" class="form-control" placeholder="in centimeters"/>
                 <span asp-validation-for="Length" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Width" class="control-label"></label>
-                <input asp-for="Width" class="form-control" />
+                <input asp-for="Width" class="form-control" placeholder="in centimeters"/>
                 <span asp-validation-for="Width" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Thickness" class="control-label"></label>
-                <input asp-for="Thickness" class="form-control" />
+                <input asp-for="Thickness" class="form-control" placeholder="in centimeters"/>
                 <span asp-validation-for="Thickness" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -39,12 +39,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="Volume" class="control-label"></label>
-                <input asp-for="Volume" class="form-control" />
+                <input asp-for="Volume" class="form-control" placeholder="in liters"/>
                 <span asp-validation-for="Volume" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                <input asp-for="Price" class="form-control" placeholder="in euros"/>
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
