--- a/SurfsUp-web/Views/Surfboards/Index.cshtml
+++ b/SurfsUp-web/Views/Surfboards/Index.cshtml
@@ -13,6 +13,9 @@
     <thead>
         <tr>
             <th>
+                @Html.DisplayNameFor(model => model.Image)
+            </th>
+            <th>
                 @Html.DisplayNameFor(model => model.Title)
             </th>
             <th>
