--- a/SurfsUp-web/Views/Surfboards/Create.cshtml
+++ b/SurfsUp-web/Views/Surfboards/Create.cshtml
@@ -13,6 +13,9 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
+                <input type="file" name="Image" id="Image"/>
+            </div>
+            <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
                 <input asp-for="Title" class="form-control" />
                 <span asp-validation-for="Title" class="text-danger"></span>
