--- a/SurfsUp-web/Views/Surfboards/Create.cshtml
+++ b/SurfsUp-web/Views/Surfboards/Create.cshtml
@@ -10,10 +10,10 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <input type="file" name="Image" id="Image"/>
+                <input type="file" name="ImageData" id="ImageData"/>
             </div>
             <div class="form-group">
                 <label asp-for="Title" class="control-label"></label>
