--- a/SurfsUp-web/Views/Shared/_Layout.cshtml
+++ b/SurfsUp-web/Views/Shared/_Layout.cshtml
@@ -23,11 +23,15 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
-                        </li>
-                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Surfboards" asp-action="Index">Surfboards</a>
                         </li>
+
+                        @if(User.IsInRole("Administrator"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="ManageUsers" asp-action="ListUsers">Brugere</a>
+                            </li>
+                        }
                     </ul>
                      <partial name="_LoginPartial" />
                 </div>
