--- a/SurfsUp-web/Views/ManageUsers/ListUsers.cshtml
+++ b/SurfsUp-web/Views/ManageUsers/ListUsers.cshtml
@@ -22,6 +22,10 @@
                         <button type="submit" class="btn btn-danger">Delete</button>
                         </form>
                     </td>
+                     <td> <form method="post" asp-action="MakeAdmin" asp-route-id="@item.Id">
+                        <button type="submit" class="btn btn-primary">Admin</button>
+                        </form>
+                    </td>
             
                 </tr>
             }
