"make admin" knap virker :o)

--- a/SurfsUp-web/Views/ManageUsers/ListUsers.cshtml
+++ b/SurfsUp-web/Views/ManageUsers/ListUsers.cshtml
@@ -1,4 +1,4 @@
-﻿@model List<SurfsUp.Areas.Identity.Data.SurfsUpUser>
+﻿@model List<List<SurfsUp.Areas.Identity.Data.SurfsUpUser>>
 
 
 @{
@@ -8,25 +8,35 @@
     <h1>Users</h1>
 
     <table class="table">
-        
+        <thead>
+            <tr>User</tr>
+            <tr></tr>
+        </thead>
         <tbody>
-            @foreach (var item in Model)
+            @foreach (var item in Model[0])
             {
                 <tr>
                     <td>
                         @Html.DisplayFor(modelItem => item.UserName)
                     </td>
-
-
-                    <td> <form method="post" asp-action="DeleteUser" asp-route-id="@item.Id">
-                        <button type="submit" class="btn btn-danger">Delete</button>
-                        </form>
+                    <td>
+                        @if (Model[1].Contains(item)) {
+                            <form method="post" asp-action="ToggleAdmin" asp-route-id="@item.Id">
+                                <button type="submit" class="btn btn-danger">Admin</button>
+                            </form>
+                            <form method="post" asp-action="DeleteUser" asp-route-id="@item.Id">
+                                <button type="submit" class="btn btn-danger">Delete</button>
+                            </form>
+                        } else {
+                            <form method="post" asp-action="ToggleAdmin" asp-route-id="@item.Id">
+                                <button type="submit" class="btn btn-primary">Admin</button>
+                            </form>
+                            <form method="post" asp-action="DeleteUser" asp-route-id="@item.Id">
+                                <button type="submit" class="btn btn-danger">Delete</button>
+                            </form>
+                        }
                     </td>
-                     <td> <form method="post" asp-action="MakeAdmin" asp-route-id="@item.Id">
-                        <button type="submit" class="btn btn-primary">Admin</button>
-                        </form>
-                    </td>
-            
+                
                 </tr>
             }
         </tbody>
