--- a/SurfsUp-web/Views/Surfboards/Create.cshtml
+++ b/SurfsUp-web/Views/Surfboards/Create.cshtml
@@ -13,58 +13,53 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Image" class="control-label"></label>
+            <div class="form-floating mb-3">
                 <input asp-for="Image" class="form-control" />
+                <label asp-for="Image"></label>
                 <span asp-validation-for="Image" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Title" class="control-label"></label>
+            <div class="form-floating mb-3">
                 <input asp-for="Title" class="form-control" />
+                <label asp-for="Title"></label>
                 <span asp-validation-for="Title" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Length" class="control-label"></label>
+            <div class="form-floating mb-3">
                 <input asp-for="Length" class="form-control" />
+                <label asp-for="Length"></label>
                 <span asp-validation-for="Length" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Width" class="control-label"></label>
+            <div class="form-floating mb-3">
                 <input asp-for="Width" class="form-control" />
+                <label asp-for="Width"></label>
                 <span asp-validation-for="Width" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Volume" class="control-label"></label>
+            <div class="form-floating mb-3">
                 <input asp-for="Volume" class="form-control" />
+                <label asp-for="Volume"></label>
                 <span asp-validation-for="Volume" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Thickness" class="control-label"></label>
+            <div class="form-floating mb-3">
                 <input asp-for="Thickness" class="form-control" />
+                <label asp-for="Thickness"></label>
                 <span asp-validation-for="Thickness" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Type" class="control-label"></label>
+            <div class="form-floating mb-3">
                 <input asp-for="Type" class="form-control" />
+                <label asp-for="Type"></label>
                 <span asp-validation-for="Type" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Price" class="control-label"></label>
+            <div class="form-floating mb-3">
                 <input asp-for="Price" class="form-control" />
+                <label asp-for="Price"></label>
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Equipment" class="control-label"></label>
+            <div class="form-floating mb-3">
                 <input asp-for="Equipment" class="form-control" />
+                <label asp-for="Equipment"></label>
                 <span asp-validation-for="Equipment" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="RentedOut" /> @Html.DisplayNameFor(model => model.RentedOut)
-                </label>
-            </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Create" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
