--- a/SurfsUp-web/Views/Surfboards/Delete.cshtml
+++ b/SurfsUp-web/Views/Surfboards/Delete.cshtml
@@ -67,16 +67,16 @@
             @Html.DisplayFor(model => model.Equipment)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.RentedOut)
+            @Html.DisplayNameFor(model => model.User_ID)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.RentedOut)
+            @Html.DisplayFor(model => model.User_ID)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <input type="submit" value="Delete" class="btn btn-outline-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
 </div>
