--- a/SurfsUp-web/Views/Surfboards/Edit.cshtml
+++ b/SurfsUp-web/Views/Surfboards/Edit.cshtml
@@ -59,13 +59,8 @@
                 <input asp-for="Equipment" class="form-control" />
                 <span asp-validation-for="Equipment" class="text-danger"></span>
             </div>
-            <div class="form-group form-check">
-                <label class="form-check-label">
-                    <input class="form-check-input" asp-for="RentedOut" /> @Html.DisplayNameFor(model => model.RentedOut)
-                </label>
-            </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="Save" class="btn btn-outline-primary" />
             </div>
         </form>
     </div>
