--- a/SurfsUp-web/Views/Bookings/Index.cshtml
+++ b/SurfsUp-web/Views/Bookings/Index.cshtml
@@ -9,9 +9,15 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
-<table class="table">
+<table class="table table-dark">
     <thead>
         <tr>
+            <th>
+                @Html.DisplayNameFor(model => model.UserId)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.SurfboardId)
+            </th>
             <th>
                 @Html.DisplayNameFor(model => model.BookingDate)
             </th>
@@ -24,6 +30,12 @@
     <tbody>
 @foreach (var item in Model) {
         <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.UserId)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.SurfboardId)
+            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.BookingDate)
             </td>
