Edited a ton of API shite and added ignore for appsettings to allow secret connectionstring

--- a/SurfsUp-web/Views/Bookings/Index.cshtml
+++ b/SurfsUp-web/Views/Bookings/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SurfsUp.Models.Booking>
+﻿@model IEnumerable<SurfsUp_API.Models.Booking>
 
 @{
     ViewData["Title"] = "Index";
