--- a/SurfsUp-web/Views/Shared/_LoginPartial.cshtml
+++ b/SurfsUp-web/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using SurfsUp.Areas.Identity.Data
+@using SurfsUp_API.Areas.Identity.Data
 
 @inject SignInManager<SurfsUpUser> SignInManager
 @inject UserManager<SurfsUpUser> UserManager
