--- a/SurfsUp-API/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/SurfsUp-API/Areas/Identity/Pages/_ViewImports.cshtml
@@ -2,4 +2,4 @@
 @using SurfsUp_API.Areas.Identity
 @using SurfsUp_API.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
-@using SurfsUp_API.Areas.Identity.Data
+@using SurfsUp_Models
