--- a/SurfsUp-Blazor/Pages/Surfboards.razor
+++ b/SurfsUp-Blazor/Pages/Surfboards.razor
@@ -1,12 +1,16 @@
 ﻿@using SurfsUp_Models
 @page "/Surfboards"
-
+@inject HttpClient Http
 <div>
-	@foreach(var s in surfboards) {
-		<Surfboard></Surfboard>
-	}
+    <h1>Surfboards</h1>
+    <p>Here are the surfboards we have for sale.</p>
+    <SurfboardGrid Surfboards="@surfboards"></SurfboardGrid>
 </div>
 
 @code {
-	private List<Surfboard> surfboards { get; set; }
+    List<Surfboard> surfboards = new List<Surfboard>();
+    protected async override void OnInitialized()
+    {
+        surfboards = await Http.GetFromJsonAsync<List<Surfboard>>("https://localhost:44394/api/surfboards");
+    }
 }
