CRUD backend for Surfboards. PS: Hvid Monster > Alle andre Monster

--- a/SurfsUp-Blazor/Shared/NavMenu.razor
+++ b/SurfsUp-Blazor/Shared/NavMenu.razor
@@ -25,7 +25,7 @@
             </NavLink>
         </div>
           <div class="nav-item px-3">
-            <NavLink class="nav-link" href="surfboards">
+            <NavLink class="nav-link" href="surfboards/index">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Surfboards
             </NavLink>
         </div>
