Added links to SurfboardCard buttons SIUUUUU

--- a/SurfsUp-Blazor/Shared/SurfboardCard.razor
+++ b/SurfsUp-Blazor/Shared/SurfboardCard.razor
@@ -19,8 +19,8 @@
         
     </ul>
     <div class="card-body">
-        <a href="#" class="card-link">Card link</a>
-        <a href="#" class="card-link">Another link</a>
+        <a href="#" class="card-link">surfboards/update</a>
+        <a href="#" class="card-link">surfboards/delete</a>
     </div>
 </div>
 @code 
